--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="shortcut icon" href="images/favicon.ico">
-  <title>Jian zhang</title>
+  <title>Jian Zhang</title>
 
   <link rel="stylesheet" href="files/font.css">
   <link rel="stylesheet" href="files/main.css">
@@ -65,7 +65,7 @@
           About Me
         </>
         <div class="sec_content">
-          <p>I am Jiang Zhang. I am currently a PhD candidate
+          <p>I am jiang zhang. I am currently a PhD candidate
             in <a href="https://cs.nju.edu.cn/">Department of Computer Science and Technology</a> at <a
               href="https://www.nju.edu.cn/">Nanjing University</a>. Fortunately, I am supervised by associate
             professor
