--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             Publications
           </h2>
 
-        <div id="publications">
+        <div>
           <div class="publication">
             <div class="img"><img class="img_responsive" src="files/imgs/ECCV2022.png" alt="Spotlight_coreference">
             </div>
