--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           About Me
         </>
         <div class="sec_content">
-          <p>I am jiang zhang. I am currently a PhD candidate
+          <p>I am jian zhang. I am currently a PhD candidate
             in <a href="https://cs.nju.edu.cn/">Department of Computer Science and Technology</a> at <a
               href="https://www.nju.edu.cn/">Nanjing University</a>. Fortunately, I am supervised by associate
             professor
