--- a/index.html
+++ b/index.html
@@ -82,6 +82,23 @@
             Publications
           </h2>
 
+          <div class="publication">
+            <div class="img"><img class="img_responsive" src="files/imgs/ICCV2023.png" alt="Spotlight_coreference"></div>
+            <div class="text">
+              <div class="title"><a href="">
+                  DomainAdaptor: A Novel Approach to Test-time Adaptation</a></div>
+              <div class="authors">
+                <span class="author me">Jian Zhang</span>,
+                <span class="author">Lei Qi</span>,
+                <span class="author">Yinghuan Shi</span>,
+                <span class="author">Yang Gao</span>
+              </div>
+              <div>
+                <span class="title">International Conference on Computer Vision (ICCV) 2023</span>
+              </div>
+            </div>
+          </div>
+
         <div>
           <div class="publication">
             <div class="img"><img class="img_responsive" src="files/imgs/ECCV2022.png" alt="Spotlight_coreference">
@@ -133,7 +150,7 @@
             <div class="img"><img class="img_responsive" src="files/imgs/TMI2021.png" alt="Spotlight_coreference"></div>
             <div class="text">
               <div class="title"><a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=9558816">
-                  Inconsistency-aware Uncertainty Estimation for Semi-supervised Medical Image Segmentation.</a></div>
+                  Inconsistency-aware Uncertainty Estimation for Semi-supervised Medical Image Segmentation</a></div>
               <div class="authors">
                 <span class="author">Yinghuan Shi</span>,
                 <span class="author me">Jian Zhang</span>,
