--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           </h2>
 
           <div class="publication">
-            <div class="img"><img class="img_responsive" src="files/imgs/ICCV2023.png" alt="Spotlight_coreference"></div>
+            <div class="img"><img class="img_responsive" src="files/imgs/ICCV2023.png"></div>
             <div class="text">
               <div class="title"><a href="">
                   DomainAdaptor: A Novel Approach to Test-time Adaptation</a></div>
@@ -99,9 +99,26 @@
             </div>
           </div>
 
+          <div class="publication">
+            <div class="img"><img class="img_responsive" src="files/imgs/ICCV2023_xiran.png"></div>
+            <div class="text">
+              <div class="title"><a href="">
+                  Generalizable Decision Boundaries: Dualistic Meta-Learning for Open Set Domain Generalization</a></div>
+              <div class="authors">
+                <span class="author">Xiran Wang</span>,
+                <span class="author me">Jian Zhang</span>,
+                <span class="author">Lei Qi</span>,
+                <span class="author">Yinghuan Shi</span>
+              </div>
+              <div>
+                <span class="title">International Conference on Computer Vision (ICCV) 2023</span>
+              </div>
+            </div>
+          </div>
+
         <div>
           <div class="publication">
-            <div class="img"><img class="img_responsive" src="files/imgs/ECCV2022.png" alt="Spotlight_coreference">
+            <div class="img"><img class="img_responsive" src="files/imgs/ECCV2022.png">
             </div>
             <div class="text">
               <div class="title"><a href="https://arxiv.org/pdf/2112.12329.pdf">
@@ -121,7 +138,7 @@
           </div>
 
           <div class="publication">
-            <div class="img"><img class="img_responsive" src="files/imgs/PR2022.png" alt="Spotlight_coreference"></div>
+            <div class="img"><img class="img_responsive" src="files/imgs/PR2022.png"></div>
             <div class="text">
               <div class="title"><a
                   href="https://www.sciencedirect.com/science/article/pii/S0031320321004726/pdfft?md5=70bdce85bd30f6abb654eeffe0003b30&pid=1-s2.0-S0031320321004726-main.pdf">A
@@ -147,7 +164,7 @@
           </div>
 
           <div class="publication">
-            <div class="img"><img class="img_responsive" src="files/imgs/TMI2021.png" alt="Spotlight_coreference"></div>
+            <div class="img"><img class="img_responsive" src="files/imgs/TMI2021.png"></div>
             <div class="text">
               <div class="title"><a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=9558816">
                   Inconsistency-aware Uncertainty Estimation for Semi-supervised Medical Image Segmentation</a></div>
