--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                 <span class="title">International Conference on Computer Vision (ICCV) 2023</span>
                 [<span class="paper_link"><a
                     href="https://openaccess.thecvf.com/content/ICCV2023/papers/Wang_Generalizable_Decision_Boundaries_Dualistic_Meta-Learning_for_Open_Set_Domain_Generalization_ICCV_2023_paper.pdf">Paper</a></span>]
-                [<span class="paper_link"><a href="https://github.com/koncle/MVDG">Code</a></span>]
+                [<span class="paper_link"><a href="https://github.com/zzwdx/MEDIC">Code</a></span>]
               </div>
             </div>
           </div>
