--- a/index.html
+++ b/index.html
@@ -82,11 +82,16 @@
           News
         </p>
         <div class="sec_content">
+          <strong>[2024-04]</strong> One paper is accepted by <strong>IEEE Transactions on Knowledge and Data Engineering (TKDE)</strong>.
+        </div>
+        <div class="sec_content">
+          <strong>[2024-03]</strong> One paper is accepted by <strong>IEEE Conference on Computer Vision and Pattern Recognition (CVPR)</strong> 2024.
+        </div>
+        <div class="sec_content">
           <strong>[2023-09]</strong> One paper is accepted by <strong>Pattern Recognition (PR)</strong> 2023.
         </div>
         <div class="sec_content">
-          <strong>[2023-07]</strong> Two papers are accepted by <strong>International Conference on Computer Vision
-            (ICCV)</strong> 2023.
+          <strong>[2023-07]</strong> Two papers are accepted by <strong>International Conference on Computer Vision (ICCV)</strong> 2023.
         </div>
       </div>
 
@@ -96,9 +101,52 @@
           </h2>
 
           <div class="publication">
-            <div class="img"><img class="img_responsive" src="files/imgs/PR2023.png"></div>
+            <div class="img"><img class="img_responsive" src="files/imgs/TKDE2024.png"></div>
             <div class="text">
               <div class="title"><a href="">
+                Exploring Flat Minima for Domain Generalization with Large Learning Rates
+              </a>
+              <div class="authors">
+                <span class="author me">Jian Zhang</span>,
+                <span class="author">Lei Qi</span>,
+                <span class="author">Yinghuan Shi</span>,
+                <span class="author">Yang Gao</span>
+              </div>
+              <div>
+                <span class="title">IEEE Transactions on Knowledge and Data Engineering (TKDE)</span>
+                [<span class="paper_link"><a href="">Paper</a></span>]
+              </div>
+            </div>
+          </div>
+          </div>
+
+          <div class="publication">
+            <div class="img"><img class="img_responsive" src="files/imgs/CVPR2024_qinghe.png"></div>
+            <div class="text">
+              <div class="title"><a href="">
+                Constructing and Exploring Intermediate Domains in Mixed Domain Semi-supervised Medical Image Segmentation
+              </a>
+              <div class="authors">
+                <span class="author">Qinghe Ma</span>,
+                <span class="author me">Jian Zhang</span>,
+                <span class="author">Lei Qi</span>,
+                <span class="author">Qian Yu</span>,
+                <span class="author">Yinghuan Shi</span>,
+                <span class="author">Yang Gao</span>
+              </div>
+              <div>
+                <span class="title">IEEE Conference on Computer Vision and Pattern Recognition (CVPR) 2024</span>
+                [<span class="paper_link"><a
+                    href="">Paper</a></span>]
+              </div>
+            </div>
+          </div>
+          </div>
+
+          <div class="publication">
+            <div class="img"><img class="img_responsive" src="files/imgs/PR2023.png"></div>
+            <div class="text">
+              <div class="title"><a href="https://pdf.sciencedirectassets.com/272206/1-s2.0-S0031320323X00107/1-s2.0-S0031320323007264/main.pdf?X-Amz-Security-Token=IQoJb3JpZ2luX2VjELf%2F%2F%2F%2F%2F%2F%2F%2F%2F%2FwEaCXVzLWVhc3QtMSJHMEUCIQDd662yyYMlWfbC5BwRY%2BixEAkl8Pk%2FPe15iGZxDuMyZQIgT2qUIYcHKokyRJSEhjL2yd%2B8ppatwruBPmCSbgJZiFMqvAUI0P%2F%2F%2F%2F%2F%2F%2F%2F%2F%2FARAFGgwwNTkwMDM1NDY4NjUiDLURO4%2F%2BoTs9biZk4CqQBalGQ1CwQ5DRsVJdeSNT7UDEHLPoyqfM0CwDqNb6pjVt4wQ7Cwp2bdXsJ6R9CMjB7h7plsC5kihSIvBnHYrXM3quWeg1O4EqgwOGQ4ixIaRExjx%2FB7xcyRwTkI4wxXW3xiHMFgjIBf62RbZ%2FqRZ5%2BpI8K%2BnHyq%2BpCkiAyjRYEsZ6sp4%2Bz%2FjTuIZGgiZNPMgVc4uoMxlMeyNcUYWcGWKxlAbuIS5iFVv%2BBxh%2BF%2BWkI8To3bCN7ggvr%2BxhV7nAadXhSQW9E8%2BN9ro2CTgXYNCAiF%2BwW5kgIblpCWRJBAPdd%2BDcvqGcs3wru%2BtbtQ%2B8yNYh8initVsJQWZaYHFM08bp3XDwUA98MuNj1t44v7vEE0wZhuQsKTEhI3Tu16AzgobxXNMdrf19ohGjmLhDja2fNUTnIdGBCq%2Fj5zydtEQq3iBNlCdS9L08uN1sgjt1Oikgs8lcA1LB9Zr9%2BD8%2FJ35u5LtZ9o51y5iLM0cOPrx0NAW%2B7rsmXQMp0enlwCP7F1G8ujBiBHHmng8SgeLzDFNBCgnuk0w4JEq1gP2zu%2BGvvYnPvw60fI3j0kpgLWpJfTiqLSCnLuoGDnrKO7gAkB860U9OpOnbbTYXsb8CThCEQNWB5tkNqyg2pA5KGPLGcHmnEBvzOViLObxJWzbKoBQUlOK7Mom37OOCOz%2BcV2%2FO4vwf25IqucJJcob9SU0Q9Oo%2FiSPDVASsdLsC6oWDdY3gj%2BgCapmte2qfetJPh3cwLauDOSMsTcy17glXxLwJx0%2B4HoPJW4bqWDdgESvxGcIUsQqlyuoEMzw11ZqjgYJvWWl5TPt2kuqqGz0NC%2F5%2BoirhAQiAsNCiH7MbpjYfIjU9F8%2Fz4v%2B%2FRl6L1%2FocLWgFuA98MJ3AyKkGOrEB4fSy1YrtniMBMLdXQQ09Jj91qyD%2FHWTLbGXXxTVgMnVJjHBOhqVfyB8NUPQRKyiElNtZ7cSkvqcSxGfUZ8E8eKJ97CZb69RZtQJDs5g8ZYfRGlXgpiOM3kv4suf6JKhyZhlXLAA3qBIicRtBNk1%2BeE8CZJf0WQkmKwU9%2B3%2BnvY3OCp1WDc7aDvowBrmbGM30%2BNmN2PNwjtYn%2B0OGmIBY8d7m97f48dnOcYGjhVWcsQsA&X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Date=20231020T074623Z&X-Amz-SignedHeaders=host&X-Amz-Expires=300&X-Amz-Credential=ASIAQ3PHCVTY5KV5KPEV%2F20231020%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Signature=eb460b378c9d757325db238aa1aaf6884eaf02da33ef198bc98e17a39975e866&hash=defaf3663c18fdd0aaf047cb70dbdc89e4a2ac19f8a868743f119ee925b06229&host=68042c943591013ac2b2430a89b270f6af2c76d8dfd086a07176afe7c76c2c61&pii=S0031320323007264&tid=spdf-63ffad40-305a-4c00-9810-20b83cb894c2&sid=9e495e5b17e5f7449d9ad983934c68ecfd82gxrqa&type=client&tsoh=d3d3LnNjaWVuY2VkaXJlY3QuY29t&ua=190b5c5257020e565d03&rr=818fa58f7fe4043c&cc=cn">
                   Domain generalization via Inter-domain Alignment and Intra-domain Expansion</a></div>
               <div class="authors">
                 <span class="author">Jiajun Hu</span>,
@@ -117,7 +165,7 @@
           <div class="publication">
             <div class="img"><img class="img_responsive" src="files/imgs/ICCV2023.png"></div>
             <div class="text">
-              <div class="title"><a href="">
+              <div class="title"><a href="https://openaccess.thecvf.com/content/ICCV2023/papers/Zhang_DomainAdaptor_A_Novel_Approach_to_Test-time_Adaptation_ICCV_2023_paper.pdf">
                   DomainAdaptor: A Novel Approach to Test-time Adaptation</a></div>
               <div class="authors">
                 <span class="author me">Jian Zhang</span>,
@@ -137,7 +185,7 @@
           <div class="publication">
             <div class="img"><img class="img_responsive" src="files/imgs/ICCV2023_xiran.png"></div>
             <div class="text">
-              <div class="title"><a href="">
+              <div class="title"><a href="https://openaccess.thecvf.com/content/ICCV2023/papers/Wang_Generalizable_Decision_Boundaries_Dualistic_Meta-Learning_for_Open_Set_Domain_Generalization_ICCV_2023_paper.pdf">
                   Generalizable Decision Boundaries: Dualistic Meta-Learning for Open Set Domain Generalization</a></div>
               <div class="authors">
                 <span class="author">Xiran Wang</span>,
