--- a/index.html
+++ b/index.html
@@ -82,6 +82,9 @@
           News
         </p>
         <div class="sec_content">
+          <strong>[2024-06]</strong> Two papers are accepted by <strong>European Conference on Computer Vision (ECCV)</strong> 2024.
+        </div>
+        <div class="sec_content">
           <strong>[2024-04]</strong> One paper is accepted by <strong>IEEE Transactions on Knowledge and Data Engineering (TKDE)</strong>.
         </div>
         <div class="sec_content">
@@ -99,13 +102,55 @@
           <h2>
             Publications
           </h2>
+ 
+          <div class="publication">
+            <div class="img"><img class="img_responsive" src="files/imgs/ECCV2024_muyang.png"></div>
+            <div class="text">
+              <div class="title"><a href="">
+                The Devil is in the Statistics: Mitigating and Exploiting Statistics Difference for Generalizable Semi-supervised Medical Image Segmentation
+              </a></div>
+              <div class="authors">
+                <span class="author">Muyang Qiu</span>,
+                <span class="author me">Jian Zhang</span>,
+                <span class="author">Lei Qi</span>, 
+                <span class="author">Qian Yu</span>, 
+                <span class="author">Yinghuan Shi</span>,
+                <span class="author">Yang Gao</span>
+              </div>
+              <div>
+                <span class="title">European Conference on Computer Vision (ECCV) 2024</span>
+                [<span class="paper_link"><a href="">Paper</a></span>]
+              </div>
+            </div>
+          </div>
+
+
+          <div class="publication">
+            <div class="img"><img class="img_responsive" src="files/imgs/ECCV2024_jiajun.png"></div>
+            <div class="text">
+              <div class="title"><a href="">
+                Learn to Preserve and Diversify: Parameter-Efficient Group with Orthogonal Regularization for Domain Generalization
+              </a></div>
+              <div class="authors">
+                <span class="author">Jiajun Hu</span>,
+                <span class="author me">Jian Zhang</span>,
+                <span class="author">Lei Qi</span>,
+                <span class="author">Yinghuan Shi</span>,
+                <span class="author">Yang Gao</span>
+              </div>
+              <div>
+                <span class="title">European Conference on Computer Vision (ECCV) 2024</span>
+                [<span class="paper_link"><a href="">Paper</a></span>]
+              </div>
+            </div>
+          </div>
 
           <div class="publication">
             <div class="img"><img class="img_responsive" src="files/imgs/TKDE2024.png"></div>
             <div class="text">
               <div class="title"><a href="">
                 Exploring Flat Minima for Domain Generalization with Large Learning Rates
-              </a>
+              </a></div>
               <div class="authors">
                 <span class="author me">Jian Zhang</span>,
                 <span class="author">Lei Qi</span>,
@@ -114,10 +159,9 @@
               </div>
               <div>
                 <span class="title">IEEE Transactions on Knowledge and Data Engineering (TKDE)</span>
-                [<span class="paper_link"><a href="">Paper</a></span>]
+                [<span class="paper_link"><a href="https://ieeexplore.ieee.org/abstract/document/10510661">Paper</a></span>]
               </div>
             </div>
-          </div>
           </div>
 
           <div class="publication">
@@ -125,7 +169,7 @@
             <div class="text">
               <div class="title"><a href="">
                 Constructing and Exploring Intermediate Domains in Mixed Domain Semi-supervised Medical Image Segmentation
-              </a>
+              </a></div>
               <div class="authors">
                 <span class="author">Qinghe Ma</span>,
                 <span class="author me">Jian Zhang</span>,
@@ -137,10 +181,9 @@
               <div>
                 <span class="title">IEEE Conference on Computer Vision and Pattern Recognition (CVPR) 2024</span>
                 [<span class="paper_link"><a
-                    href="">Paper</a></span>]
+                    href="https://openaccess.thecvf.com/content/CVPR2024/papers/Ma_Constructing_and_Exploring_Intermediate_Domains_in_Mixed_Domain_Semi-supervised_Medical_CVPR_2024_paper.pdf">Paper</a></span>]
               </div>
             </div>
-          </div>
           </div>
 
           <div class="publication">
