--- a/index.html
+++ b/index.html
@@ -57,7 +57,6 @@
             <li>Domain Generalization</li>
           </ul>
         </div>
-
       </div>
 
       <div class="section " id="aboutme">
@@ -65,14 +64,13 @@
           About Me
         </>
         <div class="sec_content">
-          <p>I am jian zhang. I am currently a PhD candidate
-            in <a href="https://cs.nju.edu.cn/">Department of Computer Science and Technology</a> at <a
-              href="https://www.nju.edu.cn/">Nanjing University</a>. Fortunately, I am supervised by associate
-            professor
+          <p>I am Jian Zhang. I am currently a postdoctoral researcher in  <a href="https://is.nju.edu.cn/zzky/list.htm">School of Intelligence Science and Technology</a> at <a
+              href="https://www.nju.edu.cn/">Nanjing University</a>. My postdoctoral supervisor is  <a href='https://cs.nju.edu.cn/gaoyang/index.htm'>Yang Gao</a>.
+            Previously, I received my PhD in <a href="https://cs.nju.edu.cn/">Department of Computer Science and Technology</a> at <a
+              href="https://www.nju.edu.cn/">Nanjing University</a>, supervised by 
             <a href='https://cs.nju.edu.cn/shiyh/'> Yinghuan Shi</a> in
-            <a href="https://cs.nju.edu.cn/rl/index.htm">Reasoning & Learning group</a>. Previously, I received my
-            B.Eng.
-            degree in School of Information Engineering at Yangzhou University in 2018.
+            <a href="https://cs.nju.edu.cn/rl/index.htm">Reasoning & Learning group</a>. I received my
+            B.Eng. degree in School of Information Engineering at Yangzhou University in 2018.
           </p>
         </div>
       </div>
