--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
 
         <div class="text ">
           <div class="subhead">Supervisor</div>
-          <div>Associate Professor <a href='https://cs.nju.edu.cn/shiyh/'> Yinghuan Shi</a> </div>
+          <div>Postdoc: Professor <a href='https://cs.nju.edu.cn/shiyh/'> Yang Gao</a> </div>
+          <div>PhD: Associate Professor <a href='https://cs.nju.edu.cn/shiyh/'> Yinghuan Shi</a> </div>
           <p />
           <div class="subhead">Current Research Topics</div>
           <ul>
