--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <h1>Jian Zhang</h1>
           <p>
           </p>
-          <div>PhD candidate</div>
+          <div>PhD</div>
           <div><a href="https://cs.nju.edu.cn/rl/index.htm"> Reasoning & Learning Group</a> </div>
           <div><a href="https://cs.nju.edu.cn/">Department of Computer Science and Technology</a></div>
           <div><a href="https://www.nju.edu.cn/">Nanjing University</a>, Nanjing 210023, China</div>
@@ -48,7 +48,7 @@
         <div class="text ">
           <div class="subhead">Supervisor</div>
           <div>Postdoc: Professor <a href='https://cs.nju.edu.cn/shiyh/'> Yang Gao</a> </div>
-          <div>PhD: Associate Professor <a href='https://cs.nju.edu.cn/shiyh/'> Yinghuan Shi</a> </div>
+          <div>PhD: Professor <a href='https://cs.nju.edu.cn/shiyh/'> Yinghuan Shi</a> </div>
           <p />
           <div class="subhead">Current Research Topics</div>
           <ul>
